# treasurer-report-flash

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  init-starter.txt  pyproject.toml
src/treasurer_flash_report/: __init__.py  builder.py  cli.py  models.py  notes.py  reports.py  sage50.py  sample.py
tests/: test_builder.py  test_cli.py  test_reports.py  test_sage50_parsers.py
