[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treasurer-flash-report"
version = "0.1.0"
description = "Convert Sage 50 Excel exports into board-ready financial flash reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown-it-py>=3.0.0",
  "openpyxl>=3.1.2",
  "pandas>=2.2.0",
]

[project.scripts]
treasurer-flash-report = "treasurer_flash_report.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]
pdf = [
  "weasyprint>=61.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
